<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:backgroundTint="#C2185B"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_category_jokes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:padding="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_cat_anekdots_avatar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/tv_category_name_anecdotes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/anecdote" />

            <TextView
                android:id="@+id/tv_cat_anekdots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_name_anecdotes"
                android:textAlignment="textStart"
                android:textSize="34sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_cat_anekdots_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cat_anekdots_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_base_info_anecdotes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_cat_anekdots_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_cat_anekdots" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_stories"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:padding="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_category_jokes"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_category_stories_avatar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/tv_category_name_stories"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/stoties" />

            <TextView
                android:id="@+id/tv_category_stories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_name_stories"
                android:textAlignment="textStart"
                android:textSize="34sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_stories_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_category_info_stories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_base_info_stories"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_stories_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_stories" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_poems"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:padding="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_stories"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_category_poems_avatar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/tv_category_name_poems"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/stih" />

            <TextView
                android:id="@+id/tv_category_poems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_name_poems"
                android:textAlignment="textStart"
                android:textSize="34sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_poems_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_category_info_poems"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_base_info_poems"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_poems_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_poems" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_afor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:padding="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_poems"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_category_afor_avatar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/tv_category_name_aphorisms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/aforismus" />

            <TextView
                android:id="@+id/tv_category_afor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_name_aphorisms"
                android:textAlignment="textStart"
                android:textSize="34sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_afor_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_category_info_afor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_base_info_aphorisms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_afor_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_afor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dad_lock"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:padding="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4D1DE"
            android:backgroundTint="#D3D8F8">

            <ImageView
                android:id="@+id/iv_category_dad_lock_avatar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/tv_category_name_dad_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/dadlock" />

            <TextView
                android:id="@+id/tv_category_dad_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_name_dad_lock"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_dad_lock_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_category_info_dad_lock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_category_base_info_dad_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_category_dad_lock_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_dad_lock" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>